test/tests/errors/error-class-proc-body-invalid.sm
// true
// false
// false
/**/
/**/

program {
    class T {
        public proc a() {
            output a;
        }
    }
}